--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr repeat.for="file of downloadQueue">
+          <tr repeat.for="file of downloader.queue">
             <td>${file.fileName}</td>
             <td>${((file.fileSize / 1024.0) / 1024.0).toFixed(2)} MiB</td>
             <td>${((file.bytesTransferred / file.fileSize) * 100.0).toFixed(2)}%</td>
