--- a/src/index.html
+++ b/src/index.html
@@ -1,72 +1,76 @@
 <template>
-  <div class="header">
-    <h1>Send files securely over WebRTC</h1>
-  </div>
-
-  <div if.bind="isUploader" class="upload-box">
-    <div if.bind="!file" id="dropzone" class="dropzone" ref="dropzoneRef">
-      <div class="dropzone-text">Drag and drop file or click to browse</div>
+    <div class="header">
+        <div class="logo">bitf.ly</div>
+        <div class="info">Fast, Secure, Free File Transfer</div>
     </div>
 
-    <div if.bind="file && !token" class="upload-box">
-      <div><h2>Please wait</h2></div>
-    </div>
-
-    <div if.bind="file" class="upload-box">
-      <div><h2>Sending "${fileName}"</h2></div>
-      <div if.bind="previewImage">
-        <img src.bind="previewImage">
-      </div>
-
-      <div if.bind="token && !uploading">
-        <h3>
-          Give this url to the receiving party:
-          <a href="${serverUrl}/${token}" target="_blank">${serverUrl}/${token}</a>
-        </h3>
-      </div>
-      
-      <div if.bind="uploading && !uploadComplete">
-        <h2>Transmitting..</h2>
-
-        <div class="progress progress-success">
-          <div class="progress-bar" role="progressbar" aria-valuenow="${reader.percentComplete}"
-            aria-valuemin="0" aria-valuemax="100" style="width:${reader.percentComplete}%">
-            <span class="sr-only">${reader.percentComplete}%</span>
-          </div>
+    <div if.bind="isUploader" class="upload-box">
+        <div if.bind="!file" id="dropzone" class="dropzone" ref="dropzoneRef">
+            <div class="dropzone-text">Drag and drop file or click to browse</div>
         </div>
-      </div>
-      <div if.bind="uploading && uploadComplete">
-        <h2>Your file has been sent successfully!</h2>
-        <h4><a href="/">Send another</a></h4>
-      </div>
-    </div>
-  </div>
 
-  <div if.bind="!isUploader" class="download-box">
-    <template if.bind="downloader.queue.length === 0">
-      <h2>Please wait..</h2>
-    </template>
-    <template if.bind="downloader.queue.length > 0">
-      <h2>
-        <template if.bind="!downloader.queue[0].localUrl">Receiving</template>
-        <template if.bind="downloader.queue[0].localUrl">Received</template>
-         "${downloader.queue[0].fileName}"</h2>
-      <h3>Size: ${((downloader.queue[0].fileSize / 1024.0) / 1024.0).toFixed(2)} MiB</h3>
-
-      <div if.bind="!downloader.queue[0].localUrl" class="progress progress-success">
-        <div class="progress-bar" role="progressbar" aria-valuenow="${downloader.queue[0].percentComplete}"
-          aria-valuemin="0" aria-valuemax="100" style="width:${downloader.queue[0].percentComplete}%">
-          <span class="sr-only">${downloader.queue[0].percentComplete}%</span>
+        <div if.bind="file && !token" class="upload-box">
+            <div><h2>Please wait</h2></div>
         </div>
-      </div>
 
-      <h2><a if.bind="downloader.queue[0].localUrl"
-        download.bind="downloader.queue[0].fileName"
-        href.bind="downloader.queue[0].localUrl">Save file</a></h2>
-    </template>
-  </div>
+        <div if.bind="file" class="upload-box">
+            <div><h2>Sending "${fileName}"</h2></div>
+            <div if.bind="previewImage">
+                <img src.bind="previewImage">
+            </div>
 
-  <div class="footer">
+            <div if.bind="token && !uploading">
+                <h3>
+                    Give this url to the receiving party:
+                    <a href="${serverUrl}/${token}" target="_blank">${serverUrl}/${token}</a>
+                </h3>
+            </div>
 
-  </div>
+            <div if.bind="uploading && !uploadComplete">
+                <h2>Transmitting..</h2>
+
+                <div class="progress progress-success">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="${reader.percentComplete}"
+                         aria-valuemin="0" aria-valuemax="100" style="width:${reader.percentComplete}%">
+                        <span class="sr-only">${reader.percentComplete}%</span>
+                    </div>
+                </div>
+            </div>
+            <div if.bind="uploading && uploadComplete">
+                <h2>Your file has been sent successfully!</h2>
+                <h4><a href="/">Send another</a></h4>
+            </div>
+        </div>
+    </div>
+
+    <div if.bind="!isUploader" class="download-box">
+        <template if.bind="downloader.queue.length === 0">
+            <h2>Please wait..</h2>
+        </template>
+        <template if.bind="downloader.queue.length > 0">
+            <h2>
+                <template if.bind="!downloader.queue[0].localUrl">Receiving</template>
+                <template if.bind="downloader.queue[0].localUrl">Received</template>
+                "${downloader.queue[0].fileName}"
+            </h2>
+            <h3>Size: ${((downloader.queue[0].fileSize / 1024.0) / 1024.0).toFixed(2)} MiB</h3>
+
+            <div if.bind="!downloader.queue[0].localUrl" class="progress progress-success">
+                <div class="progress-bar" role="progressbar" aria-valuenow="${downloader.queue[0].percentComplete}"
+                     aria-valuemin="0" aria-valuemax="100" style="width:${downloader.queue[0].percentComplete}%">
+                    <span class="sr-only">${downloader.queue[0].percentComplete}%</span>
+                </div>
+            </div>
+
+            <h2><a if.bind="downloader.queue[0].localUrl"
+                   download.bind="downloader.queue[0].fileName"
+                   href.bind="downloader.queue[0].localUrl">Save file</a></h2>
+        </template>
+    </div>
+
+    <div class="clearfix"></div>
+
+    <footer class="footer">
+        <a href="#" class="flink">Source code</a>
+    </footer>
 </template>
