--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <div if.bind="isUploader" class="container">
         <div if.bind="!file" id="dropzone" class="dropzone" ref="dropzoneRef">
             <div class="dropzone-text">Drag and drop file or click to browse</div>
+
+            <div class="fileicon"></div>
         </div>
 
         <div if.bind="file && !token" class="upload-box">
