--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <template>
     <div class="header">
         <div class="logo">bitf.ly</div>
-        <div class="info">No middleman, no cookies, no tracking - single-click secure file transfer over <a href="https://webrtc.org/">WebRTC</a></div>
+        <div class="info">No middleman, no cookies, no tracking. Single-click secure file transfer over <a href="https://webrtc.org/">WebRTC</a></div>
     </div>
 
     <div if.bind="isUploader" class="container">
