--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,6 @@
 <template>
   <require from="bootstrap/css/bootstrap.css"></require>
-  <div class="container">
-    <router-view></router-view>
-  </div>
+  <require from="dropzone/min/dropzone.min.css"></require>
+  <require from="app.css"></require>
+  <router-view containerless></router-view>
 </template>
