--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       <div if.bind="token && !uploading">
         <h3>
           Give this url to the receiving party:
-          <a href="http://localhost:9000/#/${token}" target="_blank">http://localhost:9000/#/${token}</a>
+          <a href="${serverUrl}/${token}" target="_blank">${serverUrl}/${token}</a>
         </h3>
       </div>
       
