--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base href="http://localhost:9000/">
-    <title>Aurelia</title>
-    <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.5.0/css/font-awesome.min.css">
+    <base href="http://localhost/">
+    <title>Bitf.ly</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
