--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,5 @@
 <template>
+  <require from="font-awesome/css/font-awesome.min.css"></require>
   <require from="bootstrap/css/bootstrap.css"></require>
   <require from="dropzone/min/dropzone.min.css"></require>
   <require from="app.css"></require>
