--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base href="http://localhost/">
+    <base href="http://localhost:9000/">
     <title>Bitf.ly</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
