--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
                     <br />
                     <a href="${serverUrl}/${token}" target="_blank">${serverUrl}/${token}</a>
                 </h3>
+                <h4>Don't close this tab until the transfer is complete</h4>
             </div>
 
             <div if.bind="uploading && !uploadComplete">
