--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 
     <div if.bind="isUploader" class="container">
         <div if.bind="!file" id="dropzone" class="dropzone" ref="dropzoneRef">
-            <div class="dropzone-text">Drag and drop file or click to browse</div>
+            <div class="dropzone-text">Drag and drop a file or click to browse</div>
 
             <div class="fileicon"></div>
         </div>
