--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
     <div class="clearfix"></div>
 
     <footer class="footer">
-      <span class="pull-right" style="margin: 4px;">
+      <span style="margin: 4px; float: right;">
         <a href="https://github.com/bitfly-p2p/" class="flink"><i class="fa fa-github fa-3x"></i></a>
       </span>
     </footer>
