--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,7 @@
 <template>
   <require from="font-awesome/css/font-awesome.min.css"></require>
   <require from="dropzone/min/dropzone.min.css"></require>
+  <require from="bulma/css/bulma.min.css"></require>
   <require from="app.css"></require>
   <router-view containerless></router-view>
 </template>
