--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
               </div>
               <div if.bind="uploading && uploadComplete">
                   <h2 class="title">Your file has been sent successfully!</h2>
-                  <h4 class="subtitle"><a href="/">Send another</a></h4>
+                  <h4 class="subtitle"><a href="/">Send another?</a></h4>
               </div>
             </div>
           </div>
@@ -98,7 +98,7 @@
       </div>
 
       <div style="background: #fafafa;">
-        BITF.LY HAS SHIPPED ${totalTransfers} FILES SO FAR
+        BITFLY HAS SHIPPED ${totalTransfers} FILES SO FAR
       </div>
 
       <div class="hero-footer">
