small screen fixes

--- a/src/faq.html
+++ b/src/faq.html
@@ -29,8 +29,8 @@
             </div>
         </div>
         <div class="list-item" data-faq-item="4">
-            <p class="title" click.delegate="showFaqItem(4)"><i class="fa fa-fw fa-angle-right"></i> How can I be sure you're not sending all my data
-            to the NSA and just lying about it?</p>
+            <p class="title" click.delegate="showFaqItem(4)"><i class="fa fa-fw fa-angle-right"></i> How do I know you're not sending all my data
+            to the NSA?</p>
             <div class="content">
                 <p class="inner-content">Bitfly is completely open-source and very small (less than 2000 lines of code). You can look at all of our backend and frontend code by clicking the 'GitHub' button at the bottom of the page. All file-transfer logic is on the client-side and you can inspect it easily with your browser tools (it's also intentionally not minified). While this setup would be acceptable security-wise for many needs, <strong>we advise against using Bitfly for highly sensitive data.</strong> You've been warned.
                 </p>
