--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
         <header class="header">
           <div class="header-left">
             <div class="header-item info">
-              Single-click secure file transfer over <a href="https://webrtc.org/" style="margin-left: 4px;">WebRTC</a>. 
-              <span class="subtext">No middleman, no cookies, no tracking.</span>
+              Secure file transfer over <a href="https://webrtc.org/" style="margin-left: 4px;">WebRTC</a>. 
             </div>
           </div>
           <div class="header-right">
