--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <header class="header">
           <div class="header-left">
             <div class="header-item info">
-              Secure file transfer over <a href="https://webrtc.org/" style="margin-left: 4px;">WebRTC</a>. 
+              Secure file transfer over <a href="https://webrtc.org/" style="margin-left: 0.25em;">WebRTC</a>. 
             </div>
           </div>
           <div class="header-right">
@@ -107,7 +107,7 @@
       </div>
 
       <div style="background: #fafafa;">
-        BITFLY HAS SHIPPED ${totalTransfers} FILES SO FAR
+        ${totalTransfers} FILES HAVE BEEN TRANSFERRED SECURELY
       </div>
 
       <div class="hero-footer">
