add window.onbeforeunload handler during upload/download, add supported browsers button

--- a/src/faq.html
+++ b/src/faq.html
@@ -46,7 +46,7 @@
         <div class="list-item" data-faq-item="6">
             <p class="title" click.delegate="showFaqItem(6)"><i class="fa fa-fw fa-angle-right"></i> It's not working! Help!</p>
             <div class="content">
-                <p class="inner-content">Bitfly should work for almost everyone but it won't work for some very restricted NAT setups (e.g. behind some corporate firewalls). If you encounter problems please submit an issue to one of our GitHub repos via the GitHub button at the bottom of the page.
+                <p class="inner-content">Bitfly should work for almost everyone with <a href="http://iswebrtcreadyyet.com/">a supported browser</a> but it won't work for some very restricted NAT setups (e.g. behind some corporate firewalls). If you encounter problems please submit an issue to one of our GitHub repos via the GitHub button at the bottom of the page.
                 </p>
             </div>
         </div>
