--- a/src/index.html
+++ b/src/index.html
@@ -115,6 +115,11 @@
           <div class="container">
             <div class="columns">
               <div class="column">
+                <a class="button" href="http://iswebrtcreadyyet.com/" target="_blank">
+                  Supported browsers
+                </a>
+              </div>
+              <div class="column">
                 <a class="button" href="https://github.com/bitfly-p2p/" target="_blank">
                   <i class="fa fa-github"></i>
                   GitHub
