add target=_blank to webrtc url

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <header class="header">
           <div class="header-left">
             <div class="header-item info">
-              Secure file transfer over <a href="https://webrtc.org/" style="margin-left: 0.25em;">WebRTC</a>. 
+              Secure file transfer over <a href="https://webrtc.org/" target="_blank" style="margin-left: 0.25em;">WebRTC</a>. 
             </div>
           </div>
           <div class="header-right">
