--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
               <br/>
               <div if.bind="token && !uploading">
                   <h2 class="subtitle">
-                      Give this url to the receiving party:
+                      Open this URL on the receiving device
                       <br />
                       <a href="${serverUrl}/${token}" target="_blank" class="token-link">${serverUrl}/${token}</a>
                       <br/>
