--- a/src/faq.html
+++ b/src/faq.html
@@ -8,7 +8,7 @@
             <p class="title" click.delegate="showFaqItem(1)"><i class="fa fa-fw fa-angle-right"></i> What is this?</p>
             <div class="content">
             <p class="inner-content"> Bitfly is a service which allows you to securely transfer files to (almost) any device with a modern browser.
-            It's powered by <a href="https://webrtc.org/">WebRTC</a> and uses it to establish a secure peer-to-peer connection between two browsers. The browser- provided modern end-to-end encryption means that we (or anyone else) do not get to see the contents or metadata of your files and they're always securely transmitted directly from the sending device to the receiving device.
+            It is powered by <a href="https://webrtc.org/">WebRTC</a> and establishes a secure peer-to-peer connection between two browsers. Your broser provides modern end-to-end encryption meaning that we (or anyone else) do not get to see the contents or metadata of your files and they are always securely transmitted directly from the sending device to the receiving device.
             </p>
             </div>
         </div>
@@ -16,15 +16,15 @@
             <p class="title" click.delegate="showFaqItem(2)"><i class="fa fa-fw fa-angle-right"></i> WebRTC? What?</p>
             <div class="content">
             <p class="inner-content">
-            <a href="https://webrtc.org/">WebRTC</a> is the technology powering Bitfly and is a relatively recent addition to your browser's toolkit. It's mostly intended for video/ audio conferencing but works fine for any type of data. All WebRTC communication is encrypted by
-            the latest cryptography algoritms in your browser and is as secure as any HTTPS website you visit (like your bank's website or PayPal).
+            <a href="https://webrtc.org/">WebRTC</a> is the technology powering Bitfly and is a relatively recent addition to your browser's toolkit. It is mostly intended for video and audio conferencing but works fine for any type of data. All WebRTC communication is encrypted by
+            the latest cryptography algoritms in your browser and is as secure as any HTTPS website you visit (like your bank's website or Facebook).
             </p>
             </div>
         </div>
         <div class="list-item" data-faq-item="3">
             <p class="title" click.delegate="showFaqItem(3)"><i class="fa fa-fw fa-angle-right"></i> Is sending files via Bitfly secure and anonymous?</p>
             <div class="content">
-                <p class="inner-content">Secure, absolutely! Anonymous, kind of. We do not store any kind of logs but our servers do remember your IP address for a short duration in order to setup the connection between the sending and receiving devices. While using Bitfly for any kind of illegal material is strictly forbidden, we cannot really tell what you're sending (see previous two questions) so it's up to you to be responsible with your data.
+                <p class="inner-content">Secure, absolutely! It is only somewhat anonymous. We do not store any logs but our servers do remember your IP address for a short duration in order to setup the connection between the sending and receiving devices. While using Bitfly for any kind of illegal material is strictly forbidden we cannot really tell what you are sending (see previous two questions) so it is up to you to be responsible with your data.
                 </p>
             </div>
         </div>
@@ -32,21 +32,21 @@
             <p class="title" click.delegate="showFaqItem(4)"><i class="fa fa-fw fa-angle-right"></i> How do I know you're not sending all my data
             to the NSA?</p>
             <div class="content">
-                <p class="inner-content">Bitfly is completely open-source and very small (less than 2000 lines of code). You can look at all of our backend and frontend code by clicking the 'GitHub' button at the bottom of the page. All file-transfer logic is on the client-side and you can inspect it easily with your browser tools (it's also intentionally not minified). While this setup would be acceptable security-wise for many needs, <strong>we advise against using Bitfly for highly sensitive data.</strong> You've been warned.
+                <p class="inner-content">Bitfly is completely open-source and very small (less than 2000 lines of code). You can look at all of our backend and frontend code by clicking the 'GitHub' button at the bottom of the page. All file-transfer logic is on the client-side and you can inspect it easily with your browser tools (the code is also intentionally not minified). While this setup would be acceptable security-wise for many needs <strong>we advise against using Bitfly for highly sensitive data.</strong> You have been warned.
                 </p>
             </div>
         </div>
         <div class="list-item" data-faq-item="5">
             <p class="title" click.delegate="showFaqItem(5)"><i class="fa fa-fw fa-angle-right"></i> Javascript crypto is broken!</p>
             <div class="content">
-                <p class="inner-content">We're not doing any kind of important cryptography in Bitfly's code. All encryption is done by your browser's WebRTC implementation (refer to questions 1 and 2). We do use crypto-js to do SHA-1 hashing of the file chunks in order to verify that we have rebuilt your file correctly on the other end but this has no implications on security.
+                <p class="inner-content">We are not doing any kind of important cryptography in Bitfly's code. All encryption is done by your browser's WebRTC implementation (refer to questions 1 and 2). We do use the crypto-js package to do SHA-1 hashing of the file chunks in order to verify that we have rebuilt your file correctly on the other end, however this has no substantial implication on security.
                 </p>
             </div>
         </div>
         <div class="list-item" data-faq-item="6">
             <p class="title" click.delegate="showFaqItem(6)"><i class="fa fa-fw fa-angle-right"></i> It's not working! Help!</p>
             <div class="content">
-                <p class="inner-content">Bitfly should work for almost everyone with <a href="http://iswebrtcreadyyet.com/" target="_blank">a supported browser</a> but it won't work for some very restricted NAT setups (e.g. behind some corporate firewalls). If you encounter problems please submit an issue to one of our GitHub repos via the GitHub button at the bottom of the page.
+                <p class="inner-content">Bitfly should work for almost everyone with <a href="http://iswebrtcreadyyet.com/" target="_blank">a supported browser</a> but it won't work for some very restricted NAT setups (e.g. behind some corporate firewalls). If you encounter problems please submit an issue to one of our GitHub repositories via the GitHub button at the bottom of the page.
                 </p>
             </div>
         </div>
