--- a/src/faq.html
+++ b/src/faq.html
@@ -8,7 +8,7 @@
             <p class="title" click.delegate="showFaqItem(1)"><i class="fa fa-fw fa-angle-right"></i> What is this?</p>
             <div class="content">
             <p class="inner-content"> Bitfly is a service which allows you to securely transfer files to (almost) any device with a modern browser.
-            It is powered by <a href="https://webrtc.org/">WebRTC</a> and establishes a secure peer-to-peer connection between two browsers. Your broser provides modern end-to-end encryption meaning that we (or anyone else) do not get to see the contents or metadata of your files and they are always securely transmitted directly from the sending device to the receiving device.
+            It is powered by <a href="https://webrtc.org/">WebRTC</a> and establishes a secure peer-to-peer connection between two browsers. Your browser provides modern end-to-end encryption meaning that we (or anyone else) do not get to see the contents or metadata of your files and they are always securely transmitted directly from the sending device to the receiving device. No metadata or file contents are ever transmitted to any of our servers.
             </p>
             </div>
         </div>
