--- a/src/faq.html
+++ b/src/faq.html
@@ -9,7 +9,7 @@
       <div class="content">
         <p class="inner-content">
         Bitfly is a service which allows you to securely transfer files to (almost) any device with a modern browser.
-        It is powered by <a href="https://webrtc.org/">WebRTC</a> and establishes a secure peer-to-peer connection between the sending and receiving devices. Your browser provides modern end-to-end encryption meaning that we (or anyone else) do not get to see the contents or metadata of your files and they are always securely transmitted directly from the sending device to the receiving device. No metadata or file contents are ever transmitted to any of our servers.
+        It is powered by <a href="https://webrtc.org/">WebRTC</a> and establishes a peer-to-peer connection between the sending and receiving devices. Your browser provides modern end-to-end encryption meaning that we (or anyone else) do not get to see the contents or metadata of your files and they are always securely transmitted directly from the sending device to the receiving device. No metadata or file contents are ever transmitted to any of our servers.
         </p>
       </div>
     </div>
@@ -17,7 +17,7 @@
       <p class="title" click.delegate="showFaqItem(2)"><i class="fa fa-fw fa-angle-right"></i> WebRTC? What?</p>
       <div class="content">
         <p class="inner-content">
-        <a href="https://webrtc.org/" target="_blank">WebRTC</a> is the technology powering Bitfly and is a relatively recent addition to your browser's toolkit. It is mostly intended for video and audio conferencing but works fine for any type of data. All WebRTC communication is encrypted by
+        <a href="https://webrtc.org/" target="_blank">WebRTC</a> is the technology powering Bitfly and is a relatively recent addition to your browser's toolkit. It is mostly intended for video and audio conferencing but works fine for any type of data. All WebRTC communication is encrypted using
         the latest cryptography algoritms in your browser and is as secure as any HTTPS website you are likely to visit (like Facebook or your bank's website).
         </p>
       </div>
