remove overuse of the word secure

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 
                 <div class="fileicon"></div>
 
-                <div class="dropzone-subtext">and we'll generate a secure download URL for you</div>
+                <div class="dropzone-subtext">and we'll generate a download URL for you</div>
             </div>
 
             <div if.bind="file && !token" class="upload-box">
@@ -115,7 +115,7 @@
       </div>
 
       <div style="background: #fafafa;">
-        ${totalTransfers} FILES DELIVERED SECURELY
+        ${totalTransfers} FILES DELIVERED
       </div>
 
       <div class="hero-footer">
