minor cosmetic change

--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
       </div>
 
       <div style="background: #fafafa;">
-        ${totalTransfers} FILES DELIVERED
+        DELIVERED ${totalTransfers} FILES
       </div>
 
       <div class="hero-footer">
